Rework chat and add ban system